// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentFromSidebar click to comment 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="root__comment"
        data-testid="commentFromSidebar-test"
      >
        <div
          class="root__comment_avatar"
        >
          <img
            alt="Аватар"
            class="root__comment_avatarIcon"
            src="http://localhost:5000/avatars/jakeAvatar.img"
          />
        </div>
        <div
          class="root__comment_content"
        >
          <div
            class="root__comment_header"
          >
            <div>
              <h3
                class="root__comment_header_title"
              >
                Jake
              </h3>
              <div
                class="root__comment_header_email"
              >
                jake@gmail.com
              </div>
            </div>
            <div>
              <div
                class="root__comment_header_date"
              >
                <div>
                  10 Nov 2022
                </div>
                <div>
                  07:07
                </div>
              </div>
            </div>
          </div>
          <div
            class="root__comment_body"
          >
            Lorem ipsum dolor sit amet consectetur ad...
          </div>
        </div>
      </div>
      <div
        class="root__header"
        data-testid="headerBtns"
      >
        <a
          href="/news"
        >
          <img
            alt="Назад к ленте постов"
            class="root__header_back"
            src="back.png"
          />
        </a>
        <img
          alt="Редактировать"
          class="root__header_edit"
          src="edit.png"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="root__comment"
      data-testid="commentFromSidebar-test"
    >
      <div
        class="root__comment_avatar"
      >
        <img
          alt="Аватар"
          class="root__comment_avatarIcon"
          src="http://localhost:5000/avatars/jakeAvatar.img"
        />
      </div>
      <div
        class="root__comment_content"
      >
        <div
          class="root__comment_header"
        >
          <div>
            <h3
              class="root__comment_header_title"
            >
              Jake
            </h3>
            <div
              class="root__comment_header_email"
            >
              jake@gmail.com
            </div>
          </div>
          <div>
            <div
              class="root__comment_header_date"
            >
              <div>
                10 Nov 2022
              </div>
              <div>
                07:07
              </div>
            </div>
          </div>
        </div>
        <div
          class="root__comment_body"
        >
          Lorem ipsum dolor sit amet consectetur ad...
        </div>
      </div>
    </div>
    <div
      class="root__header"
      data-testid="headerBtns"
    >
      <a
        href="/news"
      >
        <img
          alt="Назад к ленте постов"
          class="root__header_back"
          src="back.png"
        />
      </a>
      <img
        alt="Редактировать"
        class="root__header_edit"
        src="edit.png"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CommentFromSidebar first render with comment data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="root__comment"
        data-testid="commentFromSidebar-test"
      >
        <div
          class="root__comment_avatar"
        >
          <img
            alt="Аватар"
            class="root__comment_avatarIcon"
            src="http://localhost:5000/avatars/jakeAvatar.img"
          />
        </div>
        <div
          class="root__comment_content"
        >
          <div
            class="root__comment_header"
          >
            <div>
              <h3
                class="root__comment_header_title"
              >
                Jake
              </h3>
              <div
                class="root__comment_header_email"
              >
                jake@gmail.com
              </div>
            </div>
            <div>
              <div
                class="root__comment_header_date"
              >
                <div>
                  10 Nov 2022
                </div>
                <div>
                  07:07
                </div>
              </div>
            </div>
          </div>
          <div
            class="root__comment_body"
          >
            Lorem ipsum dolor sit amet consectetur ad...
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="root__comment"
      data-testid="commentFromSidebar-test"
    >
      <div
        class="root__comment_avatar"
      >
        <img
          alt="Аватар"
          class="root__comment_avatarIcon"
          src="http://localhost:5000/avatars/jakeAvatar.img"
        />
      </div>
      <div
        class="root__comment_content"
      >
        <div
          class="root__comment_header"
        >
          <div>
            <h3
              class="root__comment_header_title"
            >
              Jake
            </h3>
            <div
              class="root__comment_header_email"
            >
              jake@gmail.com
            </div>
          </div>
          <div>
            <div
              class="root__comment_header_date"
            >
              <div>
                10 Nov 2022
              </div>
              <div>
                07:07
              </div>
            </div>
          </div>
        </div>
        <div
          class="root__comment_body"
        >
          Lorem ipsum dolor sit amet consectetur ad...
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
